# Infinity-Cli

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ONBOARDING.md  README.md  RELEASE_NOTES.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci-ts.yml  ci.yml  release.yml
cli-ts/: biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
cli-ts/src/: ask-engine.test.ts  ask-engine.ts  config.test.ts  config.ts  index.test.ts  index.ts  launcher.test.ts  launcher.ts  vitest.setup.ts
cli-ts/src/bridge/: client.test.ts  client.ts  error.ts  index.ts
cli-ts/src/commands/: ask.test.ts  ask.ts  bridge.ts  chat.test.ts  chat.ts  config.test.ts  config.ts  daemon.ts  history.test.ts  history.ts  index.test.ts  index.ts  onboard.test.ts  onboard.ts  run.e2e.test.ts  run.test.ts  run.ts  search.test.ts  search.ts  summarize.test.ts  summarize.ts  update.test.ts  update.ts
cli-ts/src/daemon/: health.ts  index.ts  paths.ts  pids.ts  port.test.ts  port.ts  process.test.ts  process.ts  server.ts
cli-ts/src/indexer/: embeddings.test.ts  embeddings.ts  index.ts  repository.test.ts  repository.ts  types.ts
cli-ts/src/mcp/: client.test.ts  client.ts  index.ts  loader.test.ts  loader.ts  transport.test.ts  transport.ts  types.ts
cli-ts/src/memory/: index.ts  manager.test.ts  manager.ts
cli-ts/src/onboarding/: classifier.ts
cli-ts/src/orchestrator/: bridge-executor.ts  index.ts  integration.test.ts  integration.ts  planner.test.ts  planner.ts  scheduler.test.ts  scheduler.ts  types.ts
cli-ts/src/plugins/: index.ts  loader.test.ts  loader.ts  types.ts
cli-ts/src/providers/: anthropic.ts  base.ts  factory.test.ts  factory.ts  gemini.ts  groq.ts  key-classifier.test.ts  key-classifier.ts  nvidia.test.ts  nvidia.ts  ollama.test.ts  ollama.ts  openai.test.ts  openai.ts  openrouter.ts  registry.ts
cli-ts/src/security/: index.ts  permissions.test.ts  permissions.ts  prompt.test.ts  prompt.ts  sandbox.test.ts  sandbox.ts  types.ts
cli-ts/src/tools/: bridge.test.ts  bridge.ts  browser.test.ts  browser.ts  executor.ts  file.test.ts  file.ts  git.test.ts  git.ts  index.ts  shell.test.ts  shell.ts  testing.test.ts  testing.ts  types.ts
cli-ts/src/tui/: chat-panel.test.tsx  chat-panel.tsx  diff-panel.test.tsx  diff-panel.tsx  file-tree.test.tsx  file-tree.tsx  git-diff.test.ts  git-diff.ts  index.ts  (+9 more)
inf/: __init__.py  __main__.py  constants.py
inf/agents/: __init__.py  base.py  bus.py  registry.py
inf/bridge/: __init__.py  tool_client.py
inf/cli/: discuss.py  main.py  terminal.py
inf/compression/: __init__.py  compressor.py
inf/config/: keys.py
inf/core/: config.py  daemon.py  dag.py  orchestrator.py  runtime.py  swarm.py
inf/memory/: __init__.py  history.py  long_term.py  short_term.py  sqlite.py  vector.py
inf/models/: __init__.py  base.py  ollama.py  router.py
inf/persistence/: db.py  models.py  repositories.py
inf/providers/: base.py  detector.py  factory.py  registry.py
inf/runtime/: __init__.py  helpers.py  loop.py
inf/secrets/: manager.py
inf/security/: __init__.py  env_writer.py  gitignore_guard.py  prompt.py  sandbox.py  scanner.py
inf/server/: __init__.py  app.py  server.py
inf/sync/: __init__.py  api_client.py  websocket.py
inf/utils/: multica_collaboration.py  skylos_sandbox.py  toon_compressor.py
inf/workspaces/: __init__.py  workspace.py
infinity_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_agents.py  test_api_client.py  test_bus.py  test_cli.py  test_compression.py  test_config.py  test_core.py  test_db.py  test_detector.py  test_full_pipeline.py  test_memory.py  test_memory_bridge.py  test_model_router.py  test_orchestrator_e2e.py  test_persistence.py  test_providers.py  test_runtime_loop.py  test_sandbox.py  test_secrets.py  test_server.py  test_tool_bridge.py  test_workspaces.py
(+33 files in other folders)
