[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-cli"
version = "0.1.0"
description = "Terminal-native autonomous AI operating system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Infinity", email = "infinity@ai.local"}]
keywords = ["ai", "autonomous", "agents", "cli", "swarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "aiofiles>=23.0.0",
    "networkx>=3.0",
    "anyio>=4.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
infinity = "inf.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inf*"]