[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-cli"
version = "0.1.0"
description = "Terminal-native autonomous AI operating system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Infinity", email = "infinity@ai.local"}]
keywords = ["ai", "autonomous", "agents", "cli", "swarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "aiosqlite>=0.20",
    "websockets>=12",
    "python-dotenv>=1",
    "questionary>=2",
    "aiofiles>=23",
    "networkx>=3",
    "anyio>=4",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
infinity = "inf.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inf*"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false
